# HiClaude

./: .gitignore  CNAME  README.md  hiclaude-18765.service  pyproject.toml  readme.html
cad/: agent_epaper_stand.scad  lilygo_t5_47_desk_stand.py  lilygo_t5_47_desk_stand.step  lilygo_t5_47_desk_stand.stl  lilygo_t5_47_mounted.py  lilygo_t5_47_mounted.step  waveshare_epaper_397_desk_stand.scad
docs/: assembly.md  bom.md  index.html  quota_and_status.md  styles.css  validation.md
docs/reference/: lilygo_t5_47_reference.md
firmware/lilygo_t5_47/: platformio.ini
firmware/lilygo_t5_47/boards/: T5-ePaper-S3.json
firmware/lilygo_t5_47/src/: main.cpp
lilygo-eink-4p7-full-enclosure/: battery_door.step  battery_door.stl  buttons.step  buttons.stl  code.py  lilygo_enclosure_v15_stepped.FCStd  main_body.step  main_body.stl  meta.json  rear_cover.step  rear_cover.stl  setup_view.FCMacro  shape.step  shape.stl  trace.json
lilygo-eink-4p7-full-enclosure/refs/: REFERENCE.md
projects/claude-fan/: README.md
projects/claude-fan/cad/: fd14_claude_pixel_fan_enclosure.step  make_step.py
projects/claude-fan/docs/: design.md
projects/epaper-lilygo-t547/: README.md
projects/epaper-lilygo-t547/cad/: battery_door.step  buttons.step  code.py  main_body.step  meta.json  shape.step  side_clip_feet.step  side_clip_feet_assembled.step  side_clip_feets.step  trace.json
scripts/: start-hiclaude-18765.sh
src/agent_epaper/: cli.py  collector.py  display.py  model.py  render.py  server.py  storage.py
tests/: test_collector.py  test_model_render.py
(+15 files in other folders)
