[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-epaper"
version = "0.1.0"
description = "E-paper desk display for Claude Code and Codex task status."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
display = ["Pillow>=10", "requests>=2.31"]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]
